# Ships-and-Penguins

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  config.ini  imgui.ini
korrektur/: ex1.md  ex2.md  ex3.md
objs/: ship.mtl
shader/: particles.glsl
src/: .agphys.h.swp  CMakeLists.txt
src/cuda/: CMakeLists.txt  particle.h  particleSystem.cu  particleSystem.h  particleSystem_init.cu  particleSystem_io.cu  svd3_cuda.h
src/window/: CMakeLists.txt  agphys.cpp  agphys.h  agphys_io.cpp  main.cpp
